# openapi-python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_client_config.py  test_option_helper.py  test_option_util.py  test_push_client.py  test_quote_client.py  test_trade_client.py  test_utils.py
tests/cli/: test_client_factory.py  test_config.py  test_error_handling.py  test_formatting.py  test_main.py  test_push.py  test_quote.py  test_trade.py
tigeropen/: __init__.py  tiger_open_client.py  tiger_open_config.py
tigeropen/cli/: __init__.py  account_cmd.py  client_factory.py  config_cmd.py  formatting.py  main.py  push_cmd.py  quote_cmd.py  trade_cmd.py
tigeropen/common/: __init__.py  exceptions.py  model.py  request.py  response.py
tigeropen/common/consts/: __init__.py  filter_fields.py  fundamental_fields.py  params.py  push_destinations.py  push_subscriptions.py  push_types.py  quote_keys.py  service_types.py  tick_constants.py
tigeropen/common/util/: account_util.py  common_utils.py  contract_utils.py  encrypt_utils.py  order_utils.py  price_util.py  signature_utils.py  string_utils.py  tick_util.py  web_utils.py
tigeropen/examples/: __init__.py  client_config.py  financial_demo.py  nasdaq100.py  push_client_demo.py  push_client_stomp_demo.py  quote_client_demo.py  sp500.py  trade_client_demo.py
tigeropen/examples/ai/: README.md  server.py
tigeropen/examples/analysis/: classification.py  k_bar.py  readme.md  requirements.txt
tigeropen/examples/analysisdemo/: classification.py  k_bar.py  stats.py
tigeropen/examples/option_helpers/: __init__.py  extra_calculator.py  helpers.py  probability_calculator.py  util.py
tigeropen/examples/tinyengine/: context.py  data.py  engine.py  strategy.py
tigeropen/examples/tinyquant/: README.md  __init__.py  client.py  compatibility.py  context.py  data.py  engine.py  order_methods.py  readme.md  setting.py  settings.py  strategy.py  (+3 more)
tigeropen/push/: __init__.py  new_push_client.py  protobuf_push_client.py  push_client.py  stomp_push_client.py  thread_pool.py
tigeropen/quote/: __init__.py  quote_client.py
tigeropen/trade/: trade_client.py
(+199 files in other folders)
